@@ -1859,7 +1859,7 @@ do_serializeToConn(SEXP call, SEXP op, SEXP args, SEXP env)
 
     R_InitConnOutPStream(&out, con, type, version, hook, fun);
     R_Serialize(object, &out);
-    if (!wasopen) endcontext(&cntxt);
+    if(!wasopen) {endcontext(&cntxt); con->close(con);}
 
     return R_NilValue;
 }
@@ -1907,7 +1907,7 @@ do_unserializeFromConn(SEXP call, SEXP op, SEXP args, SEXP env)
 
     R_InitConnInPStream(&in, con, R_pstream_any_format, hook, fun);
     PROTECT(ans = R_Unserialize(&in)); /* paranoia about next line */
-    if (!wasopen) endcontext(&cntxt);
+    if(!wasopen) {endcontext(&cntxt); con->close(con);}
     UNPROTECT(1);
     return ans;
 }
